infrastructure/keycloak/oauth2-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.6.0
          args:
            - --provider=keycloak-oidc
            - --client-id=loadtester-client
            - --oidc-issuer-url=http://keycloak.keycloak.svc.cluster.local/realms/loadtester-realm
            - --insecure-oidc-skip-issuer-verification=true
            - --http-address=0.0.0.0:4180
            - --upstream=http://loadtester.loadtester.svc.cluster.local
            - --code-challenge-method=S256
            - --email-domain=*
            - --cookie-secure=false
            - --redirect-url=http://loadtester.127.0.0.1.nip.io/oauth2/callback
          ports:
            - containerPort: 4180
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: keycloak
spec:
  ports:
    - port: 4180
      targetPort: 4180
      name: http
  selector:
    app: oauth2-proxy
